tests/dataset/job/compiler/c/q29.error
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c: In function ‘test_Q29_finds_the_actress_voicing_the_Queen_in_Shrek_2’:
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:472:11: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  472 |       tmp1.len) {
      |           ^
      |           ->
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:480:32: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  480 |               .data[i3] != tmp1.data[i3]) {
      |                                ^
      |                                ->
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:615:52: error: request for member ‘starts_with’ in something not a structure or union
  615 |                                            (mi.info.starts_with("Japan:200") ||
      |                                                    ^
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:616:52: error: request for member ‘starts_with’ in something not a structure or union
  616 |                                             mi.info.starts_with("USA:200")) &&
      |                                                    ^
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:618:61: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  618 |                                            contains_string(n.name, "An") &&
      |                                                            ~^~~~~
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:71:34: note: expected ‘char *’ but argument is of type ‘const char *’
   71 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:677:14: warning: implicit declaration of function ‘int_create’; did you mean ‘list_int_create’? [-Wimplicit-function-declaration]
  677 |   int tmp6 = int_create(matches.len);
      |              ^~~~~~~~~~
      |              list_int_create
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:681:9: error: request for member ‘data’ in something not a structure or union
  681 |     tmp6.data[tmp7] = x.voiced_char;
      |         ^
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:684:7: error: request for member ‘len’ in something not a structure or union
  684 |   tmp6.len = tmp7;
      |       ^
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:689:9: error: request for member ‘data’ in something not a structure or union
  689 |     tmp9.data[tmp10] = x.voicing_actress;
      |         ^
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:692:7: error: request for member ‘len’ in something not a structure or union
  692 |   tmp9.len = tmp10;
      |       ^
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:697:10: error: request for member ‘data’ in something not a structure or union
  697 |     tmp12.data[tmp13] = x.voiced_animation;
      |          ^
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:700:8: error: request for member ‘len’ in something not a structure or union
  700 |   tmp12.len = tmp13;
      |        ^
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:701:62: error: incompatible type for argument 1 of ‘_min_string’
  701 |   result_t result[] = {(result_t){.voiced_char = _min_string(tmp6),
      |                                                              ^~~~
      |                                                              |
      |                                                              int
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:62:38: note: expected ‘list_string’ but argument is of type ‘int’
   62 | static char *_min_string(list_string v) {
      |                          ~~~~~~~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:702:66: error: incompatible type for argument 1 of ‘_min_string’
  702 |                                   .voicing_actress = _min_string(tmp9),
      |                                                                  ^~~~
      |                                                                  |
      |                                                                  int
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:62:38: note: expected ‘list_string’ but argument is of type ‘int’
   62 | static char *_min_string(list_string v) {
      |                          ~~~~~~~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:703:67: error: incompatible type for argument 1 of ‘_min_string’
  703 |                                   .voiced_animation = _min_string(tmp12)}};
      |                                                                   ^~~~~
      |                                                                   |
      |                                                                   int
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:62:38: note: expected ‘list_string’ but argument is of type ‘int’
   62 | static char *_min_string(list_string v) {
      |                          ~~~~~~~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:713:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  713 |     _json_string(it.voiced_char);
      |                  ~~^~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:76:32: note: expected ‘char *’ but argument is of type ‘const char *’
   76 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:717:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  717 |     _json_string(it.voicing_actress);
      |                  ~~^~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:76:32: note: expected ‘char *’ but argument is of type ‘const char *’
   76 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:721:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  721 |     _json_string(it.voiced_animation);
      |                  ~~^~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:76:32: note: expected ‘char *’ but argument is of type ‘const char *’
   76 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:725:68: error: incompatible types when assigning to type ‘list_int’ from type ‘result_t *’
  725 |   test_Q29_finds_the_actress_voicing_the_Queen_in_Shrek_2_result = result;
      |                                                                    ^~~~~~
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:728:12: error: request for member ‘data’ in something not a structure or union
  728 |   free(tmp6.data);
      |            ^
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:729:12: error: request for member ‘data’ in something not a structure or union
  729 |   free(tmp9.data);
      |            ^
/tmp/TestCCompiler_JOB_Goldenq291587136356/001/prog.c:730:13: error: request for member ‘data’ in something not a structure or union
  730 |   free(tmp12.data);
      |             ^
